@@ -1,4 +1,6 @@
 0.13
+ - Move defaults to _prepare_app() directly. Possible to rewrite/place in
+   module, which inherits this.
 
 0.12 2023-02-10T23:04:51+01:00
  - Fix CSS processing from Tags::HTML::Page::Begin.
